--- a/autocue.html
+++ b/autocue.html
@@ -1,3 +1,6 @@
+<html>
+<head><title>Autocue/Teleprompter by Cees Timmerman</title><head>
+<body>
 <button onclick="toggle_cue(true)" title="Click to toggle">Autocue/teleprompt</button>
 Frame time <input id='ac-slowness' type='number' style="width:70px" value='30'> ms. 
 Scroll step <input id='ac-scrollstep' type="number" style="width:60px" value="1"> px. 
@@ -59,3 +62,4 @@ function toggle_cue(on){
 	z-index: 9000;
 }
 </style>
+</body></html>
