--- a/zodiac.html
+++ b/zodiac.html
@@ -21,7 +21,11 @@ function zodiac(date){
 			"cetus_start": "12-22",
 			"cetus_end": "01-19",
 			"new_start": "01-20",
-			"new_end": "02-15"
+			"new_end": "02-15",
+			"element": "Earth",
+			"symbol": "Sea-Goat",
+			"ruling planet": "Saturn",
+			"traits": "Ambitious, organized, practical, goal-oriented"
 		},
 		{
 			"name": "Aquarius",
@@ -30,7 +34,11 @@ function zodiac(date){
 			"cetus_start": "01-20",
 			"cetus_end": "02-18",
 			"new_start": "02-16",
-			"new_end": "03-10"
+			"new_end": "03-10",
+			"element": "Air",
+			"symbol": "Water-Bearer",
+			"ruling planet": "Uranus",
+			"traits": "Nonconformist"
 		},
 		{
 			"name": "Pisces",
@@ -39,12 +47,19 @@ function zodiac(date){
 			"cetus_start": "02-19",
 			"cetus_end": "03-20",
 			"new_start": "03-11",
-			"new_end": "04-17"
+			"new_end": "04-17",
+			"element": "Water",
+			"symbol": "Fish",
+			"ruling planet": "Neptune",
+			"traits": "Artistic, intuitive, gentle"
 		},
 		{
 			"name": "Cetus",
 			"cetus_start": "03-21",
-			"cetus_end": "03-28"
+			"cetus_end": "03-28",
+			"element": "Fire",
+			"symbol": "Whale",
+			"ruling planet": "Pluto"
 		},
 		{
 			"name": "Aries",
@@ -53,7 +68,12 @@ function zodiac(date){
 			"cetus_start": "03-29",
 			"cetus_end": "04-19",
 			"new_start": "04-18",
-			"new_end": "05-12"
+			"new_end": "05-12",
+			"element": "Fire",
+			"symbol": "Ram",
+			"ruling planet": "Mars",
+			"traits": "Courageous, determined, confident",
+			"birthstones": "Topaz, Heliotrope, Aquamarine, Jasper, Diamond"
 		},
 		{
 			"name": "Taurus",
@@ -62,7 +82,12 @@ function zodiac(date){
 			"cetus_start": "04-20",
 			"cetus_end": "05-20",
 			"new_start": "05-13",
-			"new_end": "06-20"
+			"new_end": "06-20",
+			"element": "Earth",
+			"symbol": "Bull",
+			"ruling planet": "Venus",
+			"traits": "Reliable, patient, practical",
+			"birthstones": "Emerald, Sapphire, Diamond, Garnet, Rose quartz"
 		},
 		{
 			"name": "Gemini",
@@ -71,7 +96,11 @@ function zodiac(date){
 			"cetus_start": "05-21",
 			"cetus_end": "06-21",
 			"new_start": "06-21",
-			"new_end": "07-19"
+			"new_end": "07-19",
+			"element": "Air",
+			"symbol": "Twin",
+			"ruling planet": "Mercury",
+			"traits": "Gentle, affectionate, curious"
 		},
 		{
 			"name": "Cancer",
@@ -80,7 +109,12 @@ function zodiac(date){
 			"cetus_start": "06-22",
 			"cetus_end": "07-22",
 			"new_start": "07-20",
-			"new_end": "08-09"
+			"new_end": "08-09",
+			"element": "Water",
+			"symbol": "Crab",
+			"ruling planet": "Moon",
+			"traits": "Emotional, nurturing, and highly intuitive",
+			"birthstones": "Moonstone, Emerald, Ruby, Pearl"
 		},
 		{
 			"name": "Leo",
@@ -89,7 +123,11 @@ function zodiac(date){
 			"cetus_start": "07-23",
 			"cetus_end": "08-22",
 			"new_start": "08-10",
-			"new_end": "09-15"
+			"new_end": "09-15",
+			"element": "Fire",
+			"symbol": "Lion",
+			"ruling planet": "Sun",
+			"traits": "Dramatic, creative, self-confident"
 		},
 		{
 			"name": "Virgo",
@@ -98,7 +136,11 @@ function zodiac(date){
 			"cetus_start": "08-23",
 			"cetus_end": "09-22",
 			"new_start": "09-16",
-			"new_end": "10-30"
+			"new_end": "10-30",
+			"element": "Earth",
+			"symbol": "Maiden",
+			"ruling planet": "Mercury",
+			"traits": "Kind, gentle, and supportive"
 		},
 		{
 			"name": "Libra",
@@ -107,7 +149,11 @@ function zodiac(date){
 			"cetus_start": "09-23",
 			"cetus_end": "10-23",
 			"new_start": "10-30",
-			"new_end": "11-22"
+			"new_end": "11-22",
+			"element": "Air",
+			"symbol": "Scales",
+			"ruling planet": "Venus",
+			"traits": "Cooperative, diplomatic, gracious"
 		},
 		{
 			"name": "Scorpio",
@@ -116,16 +162,22 @@ function zodiac(date){
 			"cetus_start": "10-24",
 			"cetus_end": "11-14",
 			"new_start": "11-23",
-			"new_end": "11-29"
+			"new_end": "11-29",
+			"element": "Water",
+			"symbol": "Scorpion",
+			"ruling planet": "Pluto, Mars",
+			"traits": "Resourceful, brave, passionate"
 		},
 		{
 			"name": "Ophiuchus",
-			"old_start": "xx-xx",
-			"old_end": "xx-xx",
 			"cetus_start": "11-15",
 			"cetus_end": "11-22",
 			"new_start": "11-29",
-			"new_end": "12-16"
+			"new_end": "12-16",
+			"element": "Fire?",
+			"symbol": "Serpent Bearer",
+			"ruling planet": "Chiron/none",
+			"traits": "Extremely curious, open to change, passionate"
 		},
 		{
 			"name": "Sagittarius",
@@ -134,15 +186,23 @@ function zodiac(date){
 			"cetus_start": "11-23",
 			"cetus_end": "12-21",
 			"new_start": "12-17",
-			"new_end": "01-19"
+			"new_end": "01-19",
+			"element": "Fire",
+			"symbol": "Archer",
+			"ruling planet": "Jupiter",
+			"birthstones": "Topaz, Turquoise, Tanzanite, Citrine, Zircon",
+			"traits": "Independent, strong-willed"
 		}
 	]
+	function blurb(sign){
+		return sign.name + ". <i>" + sign.traits + "</i>."
+	}
 	var html = ''
 	var mm_dd = date.slice(5, 10)
 	for(let sign of signs){
-		if(sign.old_start <= mm_dd && sign.old_end >= mm_dd) html += "<br>Old sign: " + sign.name
-		if(sign.cetus_start <= mm_dd && sign.cetus_end >= mm_dd) html += "<br>Cetus sign: " + sign.name
-		if(sign.new_start <= mm_dd && sign.new_end >= mm_dd) html += "<br>New sign: " + sign.name
+		if(sign.old_start <= mm_dd && sign.old_end >= mm_dd) html += "<br>Old sign: " + blurb(sign)
+		if(sign.cetus_start <= mm_dd && sign.cetus_end >= mm_dd) html += "<br>Cetus sign: " + blurb(sign)
+		if(sign.new_start <= mm_dd && sign.new_end >= mm_dd) html += "<br>New sign: " + blurb(sign)
 	}
 	// https://www.chinahighlights.com/travelguide/chinese-zodiac/
 	var chinese_signs = [
@@ -234,23 +294,22 @@ function zodiac(date){
 	let year = parseInt(date.slice(0, 4))
 	let hour = parseInt(date.slice(11, 13))
 	for(let sign of chinese_signs){
-		if(sign.years.includes(year)) html += "<br>Chinese solar sign: " + sign.name + ". " + sign.traits + ". Best matches: " + sign.matches
-		if(sign.hours.includes(hour)) html += "<br>Chinese hour sign: " + sign.name + ". " + sign.traits + "."
+		if(sign.years.includes(year)) html += "<br>Chinese solar sign: " + blurb(sign) + " Best matches: " + sign.matches
+		if(sign.hours.includes(hour)) html += "<br>Chinese hour sign: " + blurb(sign)
 	}
 	document.getElementById('zodiac').innerHTML = html
 	// Not getting into  https://www.chinahighlights.com/travelguide/chinese-zodiac/china-five-elements-philosophy.htm
 }
 </script>
-<pre>
 <hr>
 See also these links and marvel at the coincidences while ignoring the rest, unlike Bayesian logic:
 <ul>
-<li><a href="<a href="https://www.thesun.co.uk/tech/9149004/horoscopes-wrong-new-star-signs/">https://www.thesun.co.uk/tech/9149004/horoscopes-wrong-new-star-signs/</a></li>
+<li><a href="https://www.thesun.co.uk/tech/9149004/horoscopes-wrong-new-star-signs/">https://www.thesun.co.uk/tech/9149004/horoscopes-wrong-new-star-signs/</a></li>
 <li><a href="http://old-new-horoscopes-signs.blogspot.com/new/01/new-horoscope-list-new.html">http://old-new-horoscopes-signs.blogspot.com/new/01/new-horoscope-list-new.html</a></li>
 <li><a href="https://en.wikipedia.org/wiki/Ophiuchus_(astrology)">https://en.wikipedia.org/wiki/Ophiuchus_(astrology)</a></li>
 <li><a href="https://www.chinahighlights.com/travelguide/chinese-zodiac/china-five-elements-philosophy.htm">https://www.chinahighlights.com/travelguide/chinese-zodiac/china-five-elements-philosophy.htm</a></li>
 <li><a href="https://www.yourzodiacsign.com/cetus/">https://www.yourzodiacsign.com/cetus/</a></li>
+<li><a href="https://www.universeguide.com/fact/ophiuchus">https://www.universeguide.com/fact/ophiuchus</a> has slightly different dates.</li>
 </ul>
-</pre>
 </body>
 </html>
