--- a/tournament.html
+++ b/tournament.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Group Tournament Ranking System 2021-11-27, by Cees Timmerman</title>
+	<title>Group Tournament Ranking System 2021-12-03, by Cees Timmerman</title>
 	<style>
 	body { color: black; background-color: yellowgreen; }
 	table {
@@ -17,6 +17,201 @@
 	th { background-color: rgba(255, 255, 255, 0.4); }
 	tr:nth-child(odd) { background-color: rgba(255, 255, 255, 0.2); }
 	</style>
+	<script>
+		"use strict"
+		let match_nr = 0
+		let names = []
+		let opponents = {}
+	
+		function el(html){
+			const div = document.createElement('div')
+			div.innerHTML = html.trim()
+			return div.firstChild
+		}
+	
+		function int(s){
+			return parseInt(s) || 0
+		}
+	
+		function getel(id){
+			return document.getElementById(id)
+		}
+	
+		function sel(q, e=document){
+			return e.querySelectorAll(q)
+		}
+	
+		function set_colors(){
+			const [bg, fg] = window.location.hash.slice(1).split('&')
+			document.body.style.color = fg
+			document.body.style.backgroundColor = bg
+		}
+	
+		function say(s, rate=1.0, pitch=1.0, lang="en-US"){
+			// lang: [BCP 47 language tag], pitch: [0, 2], rate: [0.1, 10]
+			if(!getel("announce").checked) return
+			const ss = window.speechSynthesis
+			const u = new SpeechSynthesisUtterance(s)
+			u.lang = lang
+			u.pitch = pitch
+			u.rate = rate
+			ss.speak(u)
+		}
+	
+		function show(html){
+			document.body.appendChild(el(html))  // adding to innerHTML clears inputs
+		}
+	
+		function shuffled(arr){
+			return arr.map(e => [Math.random(), e]).sort().map(a => a[1])
+		}
+	
+		function show_scores(){
+			const scores = {}
+			const resistance = {}
+			const wins = {}
+			const draws = {}
+			const losses = {}
+			const rows = [...sel(".match tr")].filter(e => e.querySelector("td"))
+			for(const row of rows){
+				for(let player=0; player < 2; ++player){
+					const name = sel("td", row)[1 + player].innerText
+					let [p1, p2] = [...sel("input:disabled", row)].map(e => int(e.value))
+					if(player == 1) [p1, p2] = [p2, p1]
+					for(const d of [scores, resistance, wins, draws, losses]) if(!(name in d)) d[name] = 0  // avoid defaultdict
+					if(p1 !== undefined && p2 !== undefined){  // skip enabled inputs
+						scores[name] += p1
+						resistance[name] += p2
+						wins[name] += p1 > p2
+						draws[name] += p1 == p2
+						losses[name] += p1 < p2
+					}
+				}
+			}
+			const ranking = names.map((key, index) => {
+					return [-scores[key], -resistance[key], -wins[key], -draws[key], losses[key], index, key]  // if tied, index keeps status quo
+				}
+			)
+			ranking.sort((a, b) => {
+				for(const i in a){
+					if(a[i] == b[i]) continue
+					return a[i] - b[i]
+				}
+			})
+			names = ranking.map(a => a[6])
+			let html = "<table><th>Rank</th><th>Player</th><th>Score</th><th>Resistance</th><th>Wins</th><th>Draws</th><th>Losses</th></tr>"
+			let rank = 0
+			let prev = []
+			for(let i in ranking){
+				let a = ranking[i]
+				if(a[6] == '!bye!') continue
+				if(a.slice(0, 5) !=''+ prev.slice(0, 5)) ++rank
+				html += `<tr><td>${rank}</td><td>${a[6]}</td><td>${-a[0]}</td><td>${-a[1]}</td><td>${-a[2]}</td><td>${-a[3]}</td><td>${a[4]}</td></tr>`
+				prev = a
+			}
+			html += "</table>"
+			getel("names").innerHTML = html
+		}
+	
+		function start_match(){
+			// lock in all but announce inputs
+			sel("input").forEach(e => e.disabled = true)
+			getel("announce").disabled = false
+			// pair players by order
+			if(match_nr == 0){
+				names = shuffled(getel("names").innerText.trim().split('\n'))
+				if(names.length % 2) names.push('!bye!')
+			}else{
+				const new_names = []
+				while(name = names.shift()){
+					new_names.push(name)
+					for(let i = 0; i < names.length; ++i){
+						if(!opponents[name].has(names[i])){
+							new_names.push(names[i])
+							names.splice(i, 1)  // remove opponent name
+							break
+						}
+					}
+				}
+				names = new_names
+			}
+			const opponent_sets = Object.values(opponents)
+			if(opponent_sets.length && opponent_sets[0].size > names.length-2){
+				if(confirm("All pairs have played. Still add a new round?")){
+					opponents = {}
+				}else{
+					show_scores()
+					return
+				}
+			}
+			++match_nr
+			const end_date = new Date()
+			const [m, s] = getel("duration").value.split(":").map(e => int(e))
+			end_date.setSeconds(end_date.getSeconds() + s + 60*m)
+			const match_info = `Match ${match_nr} ends at ${end_date.toTimeString().slice(0, 5)}.`
+	
+			say(match_info, 0.7)
+			show(`<h3>${match_info} <span class="timer">Time left: <span class="time">${getel("duration").value}</span></h3>`)
+			let html = `<table class="match"><tr><th>Table</th><th>P1</th><th>P2</th><th>P1 score</th><th>P2 score</th></tr>`
+			for(let i=1; i <= names.length / 2; ++i){
+				const p1 = names[(i-1)*2]
+				const p2 = names[(i-1)*2+1]
+				if(p1 in opponents){ opponents[p1].add(p2) }else{ opponents[p1] = new Set([p2]) }
+				if(p2 in opponents){ opponents[p2].add(p1) }else{ opponents[p2] = new Set([p1]) }
+				html += `<tr><td>${i}</td><td>${p1}</td><td>${p2}</td><td><input size="1" maxlength="2"></td><td><input size="1" maxlength="2" ${p2 == "!bye!" ? "disabled" : ""}></td></tr>`
+			}
+			html += "</table>"
+			show(html)
+			show_scores()
+			tell_pairs()
+		}
+	
+		function announce(){
+			const checked = getel("announce").checked
+			getel("announce").checked = true
+			tell_pairs()
+			getel("announce").checked = checked
+		}
+	
+		function tell_pairs(check){
+			sel(".match:last-child tr").forEach(e=>{
+				const td = sel("td", e)
+				if(!td.length) return
+				say("Table" + td[0].innerText + ", " + td[1].innerText + "versus" + td[2].innerText)
+			})
+		}
+	
+		setInterval(() => {
+			let timer = sel(".timer")
+			if(timer.length < 1) return
+			timer = timer[timer.length-1]
+			const t = sel(".time", timer)[0]
+			let [m, s] = t.innerText.split(":")
+			if(s){
+				if(s > 0) s = int(s) - 1
+				else if(m > 0){
+					s = 59
+					m = int(m) - 1
+				}
+			}
+			const time = ("0"+m).slice(-2) + ":" + ("0"+s).slice(-2)
+			t.innerText = time
+			let c = timer.style.backgroundColor
+			s = ""
+			if(time == "00:00" && c != "red"){
+				c = "red"
+				s = "Time. Active player finishes turn and opponent gets one last turn."
+			}else if(time == "05:00"){
+				c = "orange"
+				s = "5 minutes."
+			}else if(time == "10:00"){
+				c = "yellow"
+				s = "10 minutes."
+			}
+			timer.style.backgroundColor = c
+			if(s) say(s)
+		}, 1000)
+	</script>
 </head>
 <body onhashchange="set_colors()" onload="set_colors()">
 	<div id="names">
@@ -31,196 +226,5 @@
 	Duration: <input id="duration" title="Match duration (hh:mm)" size="6" maxlength="6" value="45:00">
 	<input id="announce" title="Announce" type="checkbox"><button type="button" onmouseup="announce()">Announce pairings</button>
 	<div id="content"></div>
-	<script>
-	var match = 0
-	var names = []
-	var opponents = {}
-
-	function el(html){
-		var div = document.createElement('div')
-		div.innerHTML = html.trim()
-		return div.firstChild
-	}
-
-	function int(s){
-		return parseInt(s) || 0
-	}
-
-	function getel(id){
-		return document.getElementById(id)
-	}
-
-	function sel(q, e=document){
-		return e.querySelectorAll(q)
-	}
-
-	function set_colors(){
-		var [bg, fg] = window.location.hash.slice(1).split('&')
-		document.body.style.color = fg
-		document.body.style.backgroundColor = bg
-	}
-
-	function say(s, rate=1.0, pitch=1.0, lang="en-US"){
-		// lang: [BCP 47 language tag], pitch: [0, 2], rate: [0.1, 10]
-		if(!getel("announce").checked) return
-		var ss = window.speechSynthesis
-		var u = new SpeechSynthesisUtterance(s)
-		u.lang = lang
-		u.pitch = pitch
-		u.rate = rate
-		ss.speak(u)
-	}
-
-	function show(html){
-		document.body.appendChild(el(html))  // adding to innerHTML clears inputs
-	}
-
-	function shuffled(arr){
-		return arr.map(e => [Math.random(), e]).sort().map(a => a[1])
-	}
-
-	function show_scores(){
-		var scores = {}
-		var resistance = {}
-		var wins = {}
-		var draws = {}
-		var losses = {}
-		var rows = [...sel(".match tr")].filter(e => e.querySelector("td"))
-		for(var row of rows){
-			for(var player=0; player < 2; ++player){
-				var name = sel("td", row)[1 + player].innerText
-				var [p1, p2] = [...sel("input:disabled", row)].map(e => int(e.value))
-				if(player == 1) [p1, p2] = [p2, p1]
-				for(var d of [scores, resistance, wins, draws, losses]) if(!(name in d)) d[name] = 0  // avoid defaultdict
-				if(p1 !== undefined && p2 !== undefined){  // skip enabled inputs
-					scores[name] += p1
-					resistance[name] += p2
-					wins[name] += p1 > p2
-					draws[name] += p1 == p2
-					losses[name] += p1 < p2
-				}
-			}
-		}
-		var ranking = names.map((key, index) => {
-				return [-scores[key], -resistance[name], -wins[key], -draws[key], losses[key], index, key]  // if tied, index keeps status quo
-			}
-		)
-		ranking.sort((a, b) => {
-			for(var i in a){
-				if(a[i] == b[i]) continue
-				return a[i] - b[i]
-			}
-		})
-		names = ranking.map(a => a[6])
-		html = "<table><th>Rank</th><th>Player</th><th>Score</th><th>Resistance</th><th>Wins</th><th>Draws</th><th>Losses</th></tr>"
-		var rank = 0
-		var prev = []
-		for(var i in ranking){
-			var a = ranking[i]
-			if(a[6] == '!bye!') continue
-			if(a.slice(0, 5) !=''+ prev.slice(0, 5)) ++rank
-			html += `<tr><td>${rank}</td><td>${a[6]}</td><td>${-a[0]}</td><td>${-a[1]}</td><td>${-a[2]}</td><td>${-a[3]}</td><td>${a[4]}</td></tr>`
-			prev = a
-		}
-		html += "</table>"
-		getel("names").innerHTML = html
-	}
-
-	function start_match(){
-		var g = sel(".match")
-		var last_match = g[g.length-1]
-		sel("input").forEach(e => e.disabled = true)
-		getel("announce").disabled = false
-		// pair players by order
-		if(match == 0){
-			names = shuffled(getel("names").innerText.trim().split('\n'))
-			if(names.length % 2) names.push('!bye!')
-		}else{
-			var new_names = []
-			while(name = names.shift()){
-				new_names.push(name)
-				for(var i = 0; i < names.length; ++i){
-					if(!opponents[name].has(names[i])){
-						new_names.push(names[i])
-						names.splice(i, 1)  // remove opponent name
-						break
-					}
-				}
-			}
-			names = new_names
-		}
-		var opponent_sets = Object.values(opponents)
-		if(opponent_sets.length && opponent_sets[0].size > names.length-2){
-			if(confirm("All pairs have played. Still add a new round?")){
-				opponents = {}
-			}else{
-				show_scores()
-				return
-			}
-		}
-		++match
-		var end_date = new Date()
-		var [m, s] = getel("duration").value.split(":").map(e => int(e))
-		end_date.setSeconds(end_date.getSeconds() + s + 60*m)
-		var match_info = `Match ${match} ends at ${end_date.toTimeString().slice(0, 5)}.`
-
-		say(match_info, 0.7)
-		show(`<h3>${match_info} <span class="timer">Time left: <span class="time">${getel("duration").value}</span></h3>`)
-		var html = `<table class="match"><tr><th>Table</th><th>P1</th><th>P2</th><th>P1 score</th><th>P2 score</th></tr>`
-		for(var i=1; i <= names.length / 2; ++i){
-			var p1 = names[(i-1)*2]
-			var p2 = names[(i-1)*2+1]
-			if(p1 in opponents){ opponents[p1].add(p2) }else{ opponents[p1] = new Set([p2]) }
-			if(p2 in opponents){ opponents[p2].add(p1) }else{ opponents[p2] = new Set([p1]) }
-			html += `<tr><td>${i}</td><td>${p1}</td><td>${p2}</td><td><input size="1" maxlength="2"></td><td><input size="1" maxlength="2" ${p2 == "!bye!" ? "disabled" : ""}></td></tr>`
-		}
-		html += "</table>"
-		show(html)
-		show_scores()
-		tell_pairs()
-	}
-
-	function announce(){
-		var checked = getel("announce").checked
-		getel("announce").checked = true
-		tell_pairs()
-		getel("announce").checked = checked
-	}
-
-	function tell_pairs(check){
-		sel(".match:last-child tr").forEach(e=>{ td = sel("td", e); if(!td.length) return; say("Table" + td[0].innerText + ", " + td[1].innerText + "versus" + td[2].innerText) })
-	}
-
-	setInterval(() => {
-		var timer = sel(".timer")
-		if(timer.length < 1) return
-		timer = timer[timer.length-1]
-		var t = sel(".time", timer)[0]
-		var [m, s] = t.innerText.split(":")
-		if(s){
-			if(s > 0) s = int(s) - 1
-			else if(m > 0){
-				s = 59
-				m = int(m) - 1
-			}
-		}
-		var time = ("0"+m).slice(-2) + ":" + ("0"+s).slice(-2)
-		t.innerText = time
-		var c = timer.style.backgroundColor
-		var s = ""
-		if(time == "00:00" && c != "red"){
-			c = "red"
-			s = "Time. Active player finishes turn and opponent gets one last turn."
-		}else if(time == "05:00"){
-			c = "orange"
-			s = "5 minutes."
-		}else if(time == "10:00"){
-			c = "yellow"
-			s = "10 minutes."
-		}
-		timer.style.backgroundColor = c
-		if(s) say(s)
-	}, 1000)
-	</script>
 </body>
 </html>
