--- a/tournament.html
+++ b/tournament.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Group Tournament Ranking System 2021-12-28, by Cees Timmerman</title>
+	<title>Group Tournament Ranking System 2021-12-31, by Cees Timmerman</title>
 	<style>
 	body { color: black; background-color: yellowgreen; }
 	table {
@@ -134,12 +134,7 @@
 				const up = '\u2191'
 				const down = '\u2193'
 				for(const h of th.parentNode.children){
-					if(h === th){
-						if(!h.innerText.match(new RegExp(` (${up}|${down})$`))) h.innerText += ` ${up}`
-						h.innerText = h.innerText.replace(new RegExp(`(.*?)(${up}|${down})$`), '$1' + (th.asc? up : down))
-					}else{
-						h.innerText = h.innerText.replace(new RegExp(`(.*?)( ${up}|${down})$`), '$1')
-					}
+					h.innerText = h.innerText.replace(new RegExp(`(.*?) ?(${up}|${down})?$`), '$1 ' + (h !== th? '' : th.asc? up : down))
 				}
 			}
 			document.querySelectorAll('th').forEach(th => th.onclick = sort_column)
