--- a/tournament/index.html
+++ b/tournament/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Group Tournament Ranking System 2021-12-31, by Cees Timmerman</title>
+	<title>Group Tournament Ranking System 2022-03-01, by Cees Timmerman</title>
 	<style>
 	body { color: black; background-color: yellowgreen; }
 	table {
@@ -27,11 +27,11 @@
 			<li>Player 3</li>
 		</ol>
 	</div>
-	<form>
+	<div>
 		<input type="button" onclick="start_match()" value="Pair players"> <input type="button" onclick="tell_pairs()" value="Announce pairings">
-		<input id="duration" title="Match duration (hh:mm)" size="6" maxlength="6" value="45:00">
+		<br><input id="duration" title="Match duration (hh:mm)" size="6" maxlength="6" value="45:00">
 		<input type="button" onclick="start_timer()" value="Start timer"> <input type="button" onclick="stop_timer()" value="Stop timer">
-	</form>
+	</div>
 	<video loop id="woke" style="height:1px; width:1px">
 		<source src="silent.ogx" type="audio/ogg">
 		Your browser does not support the audio element used to keep the page active.
