Center input text.

--- a/tournament/index.html
+++ b/tournament/index.html
@@ -6,6 +6,7 @@
 	<title>Group Tournament Ranking System 2022-03-01, by Cees Timmerman</title>
 	<style>
 	body { color: black; background-color: yellowgreen; }
+	input { text-align: center; }
 	table {
 		border: none;
 		border-spacing: 0;
