Unicode favicon thanks to Lea Verou & https://css-tricks.com/emoji-as-a-favicon/

--- a/tournament/index.html
+++ b/tournament/index.html
@@ -4,15 +4,21 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Group Tournament Ranking System 2022-04-16, by Cees Timmerman</title>
+	<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🏆</text></svg>">
+	<title>Group Tournament Ranking System</title>
 	<style>
 		body {
 			color: black;
 			background-color: yellowgreen;
+			text-align: center;
 		}
 
 		input {
 			text-align: center;
+		}
+		ol {
+			list-style-position: inside;
+			padding: 0;
 		}
 
 		table {
@@ -44,7 +50,9 @@
 
 <body onhashchange="set_colors()" onload="set_colors()">
 	<div id="names">
-		<h3>Enter Players</h3>
+		<h1>Group Tournament Ranking System</h1>
+		Version 2022-04-16, by Cees Timmerman
+		<h3>Enter players:</h3>
 		<ol contentEditable="true">
 			<li>Player 1</li>
 			<li>Player 2</li>
