--- a/tournament/index.html
+++ b/tournament/index.html
@@ -55,10 +55,11 @@
 	<script src="tournament.js"></script>
 </head>
 
-<body onhashchange="set_colors()" onload="set_colors()">
+<body onhashchange="set_colors()" onload="init()">
+	<h1>Group Tournament Ranking System</h1>
+	Version 2022-04-16, by Cees Timmerman
+	<h4 id="date"></h4>
 	<div id="names">
-		<h1>Group Tournament Ranking System</h1>
-		Version 2022-04-16, by Cees Timmerman
 		<h3>Enter players:</h3>
 		<ol contentEditable="true">
 			<li>Player 1</li>
