--- a/tournament/index.html
+++ b/tournament/index.html
@@ -56,7 +56,7 @@
 </head>
 
 <body onhashchange="set_colors()" onload="init()">
-	<h1>Group Tournament Ranking System</h1>
+	<h1>Group <span ondblclick='egg("yellowgreen&black")'>T</span>ournament <span ondblclick='egg()'>R</span>anking <span ondblclick='egg("black&white")'>S</span>ystem</h1>
 	Version 2022-05-07, by Cees Timmerman
 	<h4 id="date"></h4>
 	<div id="names">
