--- a/camera.html
+++ b/camera.html
@@ -1,6 +1,8 @@
 <html>
 
 <head>
+	<link rel="icon"
+	href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 112 100%22><text y=%22.9em%22 font-size=%2290%22>📷</text></svg>">
 	<title>Camera</title>
 	<style>
 		body {
