--- a/camera.html
+++ b/camera.html
@@ -27,66 +27,38 @@
 	<video autoplay muted playsinline></video>
 	<script>
 		'use strict'
-		// https://github.com/samdutton/simpl/blob/gh-pages/getusermedia/sources/index.html
+
 		var videoElement = document.querySelector('video')
 		var audioSelect = document.querySelector('select#audioSource')
 		var videoSelect = document.querySelector('select#videoSource')
-
-		audioSelect.onchange = getStream
-		videoSelect.onchange = getStream
-
-		getStream().then(getDevices).then(gotDevices)
-
-		function getDevices() {
-			// AFAICT in Safari this only gets default devices until gUM is called :/
-			return navigator.mediaDevices.enumerateDevices()
-		}
-
-		function gotDevices(deviceInfos) {
-			window.deviceInfos = deviceInfos; // make available to console
-			console.log('Available input and output devices:', deviceInfos)
-			for (const deviceInfo of deviceInfos) {
+		audioSelect.onchange = setSource
+		videoSelect.onchange = setSource
+		
+		navigator.mediaDevices.enumerateDevices().then(devices => {
+			devices.forEach(device => {
 				const option = document.createElement('option')
-				option.value = deviceInfo.deviceId
-				if (deviceInfo.kind === 'audioinput') {
-					option.text = deviceInfo.label || `Microphone ${audioSelect.length + 1}`
+				option.value = device.deviceId
+				if (device.kind === 'audioinput') {
+					option.text = device.label || `Microphone ${audioSelect.length + 1}`
 					audioSelect.appendChild(option)
-				} else if (deviceInfo.kind === 'videoinput') {
-					option.text = deviceInfo.label || `Camera ${videoSelect.length + 1}`
+				} else if (device.kind === 'videoinput') {
+					option.text = device.label || `Camera ${videoSelect.length + 1}`
 					videoSelect.appendChild(option)
 				}
-			}
-		}
+			})
+		}).catch(err => console.log(err.name + ": " + err.message))
 
-		function getStream() {
-			if (window.stream) {
-				window.stream.getTracks().forEach(track => {
-					track.stop()
-				})
-			}
+		function setSource() {
 			const audioSource = audioSelect.value
 			const videoSource = videoSelect.value
 			const constraints = {
 				audio: { deviceId: audioSource ? { exact: audioSource } : undefined },
-				video: { deviceId: videoSource ? { exact: videoSource } : undefined }
+				video: { deviceId: videoSource ? { exact: videoSource } : undefined },
 			}
-			return navigator.mediaDevices.getUserMedia(constraints).
-				then(gotStream).catch(handleError)
+			videoElement.srcObject = navigator.mediaDevices.getUserMedia(query)
+			.then(stream => document.getElementById('video').srcObject = stream)
+			.catch(err => console.log(err))
 		}
-
-		function gotStream(stream) {
-			window.stream = stream; // make stream available to console
-			audioSelect.selectedIndex = [...audioSelect.options].
-				findIndex(option => option.text === stream.getAudioTracks()[0].label)
-			videoSelect.selectedIndex = [...videoSelect.options].
-				findIndex(option => option.text === stream.getVideoTracks()[0].label)
-			videoElement.srcObject = stream
-		}
-
-		function handleError(error) {
-			console.error('Error: ', error)
-		}
-		// /simpl
 
 		function snap() {
 			var canvas = document.createElement('canvas')
