--- a/tournament/index.html
+++ b/tournament/index.html
@@ -7,7 +7,7 @@
 	<title>Group Tournament Ranking System</title>
 	<link rel="icon"
 		href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 112 100%22><text y=%22.9em%22 font-size=%2290%22>🏆</text></svg>">
-	<link rel="stylesheet" href="style.css" type="text/css" media="all" />
+	<link rel="stylesheet" href="style.css" type="text/css" media="all">
 	<script src="tournament.js"></script>
 </head>
 
