--- a/tournament/index.html
+++ b/tournament/index.html
@@ -12,9 +12,9 @@
 </head>
 
 <body onhashchange="set_colors()" onload="init()">
-	<h1><span ondblclick='egg("##591319&#fc9b17")'>G</span>roup <span ondblclick='egg("yellowgreen&black")'>T</span>ournament <span ondblclick='egg()'>R</span>anking <span ondblclick='egg("black&white")'>S</span>ystem</h1>
-	Version 2022-06-09, by Cees Timmerman
-	<h4 id="date"></h4>
+	<h1><span onclick='egg("##591319&#fc9b17")'>G</span>roup <span onclick='egg("yellowgreen&black")'>T</span>ournament <span onclick='egg()'>R</span>anking <span onclick='egg("black&white")'>S</span>ystem</h1>
+	<div onclick="this.classList.toggle('rainbow')">Version 2022-06-13, by Cees Timmerman</div>
+	<h4 onclick="this.classList.toggle('fade')" id="date"></h4>
 	<div id="names">
 		<h3>Enter players:</h3>
 		<ol contentEditable="true">
@@ -23,19 +23,14 @@
 			<li>Player 3</li>
 		</ol>
 		<input type="button" onclick="shuffle_players()" value="Shuffle">
-		<hr>
+		<hr class="rainbow">
 	</div>
-	<div>
-		<input type="button" onclick="pair_players()" value="Pair players">
-		<input type="button" onclick="tell_pairs()" value="Announce pairings">
-	</div>
-	<div>
-		<input type="text" id="duration" title="Match duration (hh:mm)" size="4" maxlength="6" value="50:00">
-		<input type="button" onclick="toggle_timer()" value="Start timer" id="btn_timer">
-	</div>
+	<input type="button" onclick="pair_players()" value="Pair players for match">
+	<input type="text" id="duration" title="Match duration (hh:mm)" size="4" maxlength="6" value="50:00">
+	<input type="button" onclick="toggle_timer()" value="Start timer" id="btn_timer">
 	<video loop id="woke">
 		<source src="silent.ogx" type="audio/ogg">
-		Your browser does not support the audio element used to keep the page active.
+		Your browser does not support the video element used to keep the page active.
 	</video>
 	<div id="content"></div>
 </body>
