Dice is more correct.

--- a/dice.html
+++ b/dice.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Die Roller, by Cees Timmerman</title>
+    <title>Dice Roller, by Cees Timmerman</title>
     <link rel="icon"
 	href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 112 100%22><text y=%22.9em%22 font-size=%2290%22>🎲</text></svg>">
     <style>
@@ -17,10 +17,10 @@
 </head>
 
 <body>
-    <h1>Die Roller</h1>
+    <h1>Dice Roller</h1>
     <div id='results'>
     </div>
-    <button onclick='roll()'>Roll die</button> <button onclick='do_clear()'>Clear</button>
+    <button onclick='roll()'>Roll dice</button> <button onclick='do_clear()'>Clear</button>
     <script>
         'use strict'
         let results = document.getElementById('results')
