Nonblocking alert to look better and not interrupt timer.

--- a/tournament/index.html
+++ b/tournament/index.html
@@ -33,6 +33,9 @@
 		Your browser does not support the video element used to keep the page active.
 	</video>
 	<div id="content"></div>
+	<div id="alertcontainer" onclick="this.style.visibility='hidden'">
+		<div id="alert"></div>
+	</div>
 </body>
 
 </html>
