--- a/tournament/index.html
+++ b/tournament/index.html
@@ -33,9 +33,7 @@
 		Your browser does not support the video element used to keep the page active.
 	</video>
 	<div id="content"></div>
-	<div id="alertcontainer" onclick="this.style.visibility='hidden'">
-		<div id="alert"></div>
-	</div>
+	<div id="alertcontainer" onclick="this.style.visibility='hidden'"></div>
 </body>
 
 </html>
