--- a/tournament/index.html
+++ b/tournament/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body onhashchange="set_colors()" onload="init()">
-	<h1><span onclick='egg("##591319&#fc9b17")'>G</span>roup <span onclick='egg("yellowgreen&black")'>T</span>ournament <span onclick='egg()'>R</span>anking <span onclick='egg("black&white")'>S</span>ystem</h1>
+	<h1><span onclick="egg('##591319&#fc9b17')">G</span>roup <span onclick="egg('yellowgreen&black')">T</span>ournament <span onclick="egg()">R</span>anking <span onclick="egg('black&white')">S</span>ystem</h1>
 	<div onclick="this.classList.toggle('rainbow')">Version 2022-07-04, by Cees Timmerman</div>
 	<h4 onclick="this.classList.toggle('fade')" id="date"></h4>
 	<div id="names">
