Most humans count from 1.

--- a/counter.html
+++ b/counter.html
@@ -91,7 +91,7 @@
 <div class="black counter">0</div>
 <div class="red counter">0</div>
 <div class="green counter">0</div>
-<div class="name">Player ${number}</div>`
+<div class="name">Player ${number + 1}</div>`
 			document.getElementById('container').appendChild(d);
 
 			[...document.querySelectorAll('.counter')].forEach(e => {
