--- a/counter.html
+++ b/counter.html
@@ -69,7 +69,7 @@
 
 <body>
 	<div id="container"></div>
-	<div onclick="add_player()" style="margin:1em">Add player</div>
+	<div onclick="add_player()" style="margin: 2em; display: inline-block">Add player</div>
 	<script>
 		'use strict'
 		function add_player() {
